force-app/main/default/objects/BusinessLicenseApplication/fields/Type_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work__c</fullName>
    <label>Type of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Expansion</fullName>
            </value>
            <value>
                <fullName>Building Demolition</fullName>
            </value>
            <value>
                <fullName>Removal of a Tree</fullName>
            </value>
            <value>
                <fullName>Removal of a Tree Stump</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>