force-app/main/default/objects/BusinessLicenseApplication/fields/Work_Entity_Information__c.field-meta.xml
<CustomField>
    <fullName>Work_Entity_Information__c</fullName>
    <label>Work Entity Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Property Owner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>