force-app/main/default/objects/BusinessLicenseApplication/recordTypes/Other_License_or_Permit.recordType-meta.xml
<RecordType>
    <fullName>Other_License_or_Permit</fullName>
    <active>true</active>
    <description>Non-reopening</description>
    <label>License or Permit</label>
</RecordType>