force-app/main/default/objects/BusinessLicenseApplication/recordTypes/PublicSector__Reopening_Permit_Request.recordType-meta.xml
<RecordType>
    <fullName>PublicSector__Reopening_Permit_Request</fullName>
    <active>true</active>
    <label>Reopening Permit Request</label>
</RecordType>