force-app/main/default/objects/BusinessLicenseApplication/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>