force-app/main/default/objects/BusinessLicenseApplication/listViews/All_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>All_BusinessLicenseApplication</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>LicenseType</columns>
    <columns>AppliedDate</columns>
    <columns>Status</columns>
    <columns>WasReturned</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>BusinessLicenseApplication.Other_License_or_Permit</value>
    </filters>
    <label>All Business License Applications</label>
</ListView>