force-app/main/default/objects/BusinessLicenseApplication/listViews/Application_Reviewers_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>Application_Reviewers_BusinessLicenseApplication</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>LicenseType</columns>
    <columns>AppliedDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Submitted,Application Accepted,In Review</value>
    </filters>
    <label>Application Reviewers</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>